--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.1",
@@ -37,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
